Eliminadas violaciones de findbugs